--- a/29.10/piano/piano.css
+++ b/29.10/piano/piano.css
@@ -1,18 +1,33 @@
-body{
-    padding: 0;
-    margin: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 50px;
  }
  
  section{
-    margin: 0 auto;
- }
+    text-align: center;
  
- section div{display: inline-block; width: 40px; height: 150px; border: 1px solid;}
- section div.semi{
-    position: absolute;
+ 
+ }
+ .blanca{
+    width: 40px;
+    margin-top: -11px;
+    height: 200px;
+    background-color: white;
+    border: 2px black solid;
+    display: inline-block;
+ 
+ 
+ 
+ }
+ .negra{
+    height: 130px;
+    width: 40px;
     background-color: black;
-    margin-left: -20px;
-    width: 30px;
-    height: 100px;
+    display: inline-block;
+   margin: -11px;
+   margin-left: -20px;
+   position: absolute;
+ 
  }
